# opensheet-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: build-wheel.yml  ci.yml  release.yml
benchmarks/: bench_read.py  bench_utils.py  bench_write.py  benchmark.py
docs/: benchmarking.md
python/opensheet_core/: __init__.py  _native.pyi  pandas.py
python/opensheet_core/libopensheet_core.dylib.dSYM/Contents/: Info.plist
python/opensheet_core/libopensheet_core.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libopensheet_core.dylib.yml
src/: lib.rs  types.rs
src/reader/: xlsx.rs
src/writer/: xlsx.rs
tests/: test_basic.py  test_comments_hyperlinks.py  test_extract.py  test_named_ranges.py  test_pandas.py  test_sheet_protection.py  test_sheet_states.py  test_styling.py  test_tables.py  test_xlsm_support.py  test_xlsx_writer.py
