[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "opensheet-core"
version = "0.1.0"
description = "A fast, memory-efficient spreadsheet I/O library for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

[project.optional-dependencies]
dev = ["pytest", "openpyxl"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "opensheet_core._native"
